--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1" />
-    <title>Ecotrain</title>
+    <title>Empreinte d'une trottinette</title>
 
   <style type="text/css">
     body {
@@ -18,6 +18,9 @@
   <body>
     <div id="app"></div>
     <script src="/index.js"></script>
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script> 
+
   </body>
 </html>
 
